mocks/with-ambassador/proxy-interceptor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: doesNotMatter
spec:
  template:
    spec:
      volumes:
        - name: annotations
          downwardAPI:
            items:
              - path: "annotations"
                fieldRef:
                  fieldPath: metadata.annotations
      containers:
        - name: proxy-traffic-interceptor
          image: "quay.io/zgrinber/traffic-interceptor-quarkus:3"
          ports:
            - name: proxy
              containerPort: 10000
          volumeMounts:
            - mountPath: /tmp/annotations
              name: annotations
