mocks/with-ambassador/route-application.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    purpose: mock-microservice
  name: employees-api
spec:
  to:
    kind: Service
    name: employees-api
    weight: 100
